--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   position: relative;
+   position: fixed;
    top: 10px;
    z-index: 1000;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -42,12 +42,17 @@
    position: fixed;
    top: 0;
    left: 0;
-   height: 100vh;
+   height: 100%;
    background: var(--sidebar_bg);
    width: calc(200px + 2vw);
    z-index: 999;
    transition: all 0.5s ease;
    padding: 5rem 0;
+   overflow-x: hidden;
+   overflow-y: auto;
+}
+.sidebar::-webkit-scrollbar {
+   display: none;
 }
 .sidebar.close {
    width: 7.8rem;
@@ -74,14 +79,36 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
-   margin-left: 2.7rem;
+   margin-left: 1.7rem;
 }
 .sidebar .nav_menu_items .nav_link {
-   /* background: red; */
    padding: 1.5rem 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
+   padding-left: 1rem;
+}
+.sidebar .nav_menu_items .nav_link.selected .link_name {
+   color: var(--sidebar_bg);
+   font-weight: 500;
+}
+.sidebar .nav_menu_items .nav_link.selected {
+   background: var(--content_bg);
+   border-radius: 3rem 0 0 3rem;
+}
+.sidebar .nav_menu_items .nav_link.selected svg {
+   fill: var(--sidebar_bg);
+}
+.sidebar .nav_menu_items .nav_link:hover {
+   background: var(--content_bg);
+   border-radius: 3rem 0 0 3rem;
+}
+.sidebar .nav_menu_items .nav_link:hover svg {
+   fill: var(--sidebar_bg);
+}
+.sidebar .nav_menu_items .nav_link:hover.nav_link .link_name {
+   color: var(--sidebar_bg);
+   font-weight: 500;
 }
 .sidebar .nav_menu_items .nav_link .link_name {
    font-size: 1.8rem;
@@ -93,4 +120,60 @@
 }
 .sidebar .nav_menu_items .nav_link .arrow {
    padding: 0 0.7rem;
+}
+.sidebar .nav_menu_items .sub_nav_link {
+   padding: 1.1rem 0;
+   margin-left: 1.5rem;
+   display: flex;
+   align-items: center;
+   /* justify-content: space-between; */
+}
+.sidebar .nav_menu_items .sub_nav_link .sub_link_name {
+   margin-left: 1.5rem;
+   font-size: 1.5rem;
+   color: var(--white);
+}
+.sidebar.close .nav_menu_items .sub_nav_link .sub_link_name {
+   display: none;
+}
+.sidebar .profile_details {
+   position: fixed;
+   bottom: 0;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   background: #1b1b31;
+   padding: 0.6rem 0;
+   width: calc(200px + 2vw);
+   transition: all 0.3s ease;
+}
+.sidebar.close .profile_details {
+   width: 7.8rem;
+}
+.sidebar .profile_details .profile_content {
+   display: flex;
+   align-items: center;
+}
+.sidebar .profile_details img {
+   height: 5.2rem;
+   width: 5.2rem;
+   object-fit: cover;
+   border-radius: 1.6rem;
+   background: var(--sidebar_bg);
+   padding: 5px;
+   margin: 0 1.4rem 0 1.2rem;
+}
+.sidebar .profile_details .profile_name,
+.sidebar .profile_details .job {
+   font-weight: 500;
+   color: var(--white);
+   font-size: 1.8rem;
+   white-space: nowrap;
+}
+.sidebar .profile_details .job {
+   font-size: 1.2rem;
+}
+.sidebar.close .profile_details .profile_name,
+.sidebar.close .profile_details .job {
+   display: none;
 }
